--- a/css/general.css
+++ b/css/general.css
@@ -2,6 +2,7 @@ html {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
   background-color: rgb(255, 255, 255);
+  scroll-behavior: smooth;
 }
 
 ::selection {
