--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
   /* Hero Section */
 
   .hero {
-    margin-top: -4rem;
+    margin-top: -1.5rem;
   }
 
   .hero-video {
@@ -14,25 +14,30 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
-    filter: grayscale(50%);
+    filter: brightness(40%) grayscale(50%);
   }
 
   .hero-text {
+    display: block;
     position: absolute;
-    top: 28%;
-    left: 5%;
+    margin: 0 auto;
+    left: 10%;
+    right: 10%;
+    top: 5%;
   }
 
   .hero-text h1 {
-    font-size: 1.7rem;
+    font-size: 1.3rem;
     color: white;
+    text-align: center;
     margin-bottom: 0;
   }
 
   .hero-text p {
     margin-top: 0;
     font-weight: 700;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
+    text-align: center;
     color: #b58133dd;
   }
 
@@ -272,6 +277,7 @@
   }
 }
 
+
 /* Tablet */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   main {
@@ -282,7 +288,7 @@
 
   .hero-text {
     position: absolute;
-    top: 20%;
+    top: 13%;
     left: 5%;
   }
 
