--- a/css/research.css
+++ b/css/research.css
@@ -43,6 +43,10 @@ main {
     font-size: 10px;
   }
   
+
+  .no-mobile {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
