--- a/css/general.css
+++ b/css/general.css
@@ -10,8 +10,14 @@ html {
   color: white;
 }
 
-.nav-links, .mobile-nav-links-list  {
+.nav-links,
+.mobile-nav-links-list {
   list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 body {
@@ -75,9 +81,9 @@ a {
     width: 40%;
   }
 
-#mobile-nav-links-list {
-  display: none;
-}
+  #mobile-nav-links-list {
+    display: none;
+  }
 
   .mobile-list {
     list-style-type: none;
@@ -108,7 +114,6 @@ a {
     align-items: flex-end;
     padding-left: 90%;
   }
-
 
   .logo {
     width: 10%;
@@ -219,7 +224,7 @@ a {
     font-size: 0.5em;
   }
 
-  .ft-rw-copy{
+  .ft-rw-copy {
     display: inline-flex;
     flex-direction: row;
     justify-content: center;
@@ -378,7 +383,7 @@ a {
     color: white;
   }
 
-  .ft-rw-copy{
+  .ft-rw-copy {
     display: inline-flex;
     flex-direction: row;
     justify-content: center;
@@ -536,7 +541,7 @@ a {
     color: white;
   }
 
-  .ft-rw-copy{
+  .ft-rw-copy {
     display: inline-flex;
     flex-direction: row;
     justify-content: center;
