--- a/css/undergrad.css
+++ b/css/undergrad.css
@@ -23,6 +23,23 @@
   border-bottom-right-radius: 0.5em;
 }
 
+.it-cs-programmes {
+  font-size: 16px;
+  margin-top: 1.5rem;
+}
+
+.it-cs-cols {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  font-size: 16px;
+}
+
+td, tr {
+  font-size: 0.7rem;
+}
+
 }
 
 /* Tablet */
@@ -50,6 +67,21 @@
   border-bottom-right-radius: 0.5em;
 }
 
+.it-cs-programmes {
+  font-size: 16px;
+  padding: 1em;
+  margin-top: 1.5rem;
+}
+
+.it-cs-cols {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  font-size: 16px;
+  padding: 1em;
+}
+
 }
 
 /* Desktop */
@@ -70,6 +102,21 @@
   font-size: 16px;
   border-bottom-left-radius: 0.5em;
   border-bottom-right-radius: 0.5em;
+}
+
+.it-cs-programmes {
+  font-size: 16px;
+  padding: 1em;
+  margin-top: 1.5rem;
+}
+
+.it-cs-cols {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  font-size: 16px;
+  padding: 1em;
 }
 
 }
@@ -105,23 +152,16 @@
 h2 {
   z-index: 3;
   color: white;
+  text-align: center;
 }
 
-.it-cs-cols {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  justify-content: center;
-  font-size: 16px;
-  padding: 1em;
-}
+
 
 .it-cs-cols h1 {
   text-align: center;
 }
 
-.abt-undergrad,
-.it-cs-programmes {
+.abt-undergrad {
   font-size: 16px;
   padding: 1em;
   margin-top: 1.5rem;
@@ -186,7 +226,7 @@ dd {
   padding-left: 1em;
   padding-bottom: 0.5em;
   margin-bottom: 1em;
-  /* display: none; */
+  display: none;
   box-shadow: rgba(50, 50, 93, 0.146) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.112) 0px 8px 16px -8px;
   border-bottom-right-radius: 0.5em;
@@ -220,3 +260,7 @@ dt a {
   font-weight: bold;
 }
 
+
+.it-cs-cols {
+  overflow: hidden;
+}
