--- a/css/general.css
+++ b/css/general.css
@@ -1,3 +1,5 @@
+/* General Page Styling */
+
 html {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
@@ -48,6 +50,7 @@ a {
 
 /* Mobile */
 @media only screen and (max-width: 767px) {
+  /* Nav Bar */
   .nav-links {
     display: none;
   }
@@ -123,6 +126,8 @@ a {
     width: 13em;
   }
 
+
+  /* Footer */
   .footer {
     display: flex;
     flex-direction: column;
@@ -288,6 +293,8 @@ a {
     color: rgb(255, 196, 0);
   }
 
+  /* Footer */
+
   .footer {
     display: flex;
     flex-direction: column;
@@ -394,6 +401,7 @@ a {
 
 /* Desktop */
 @media only screen and (min-width: 1024px) {
+  /* Nav BAr */
   .nav-bar {
     position: fixed;
     display: flex;
@@ -447,6 +455,8 @@ a {
     color: rgb(255, 196, 0);
   }
 
+
+  /* Footer */
   .footer {
     display: flex;
     flex-direction: column;
