--- a/css/undergrad.css
+++ b/css/undergrad.css
@@ -77,7 +77,7 @@ td, tr {
   display: flex;
   flex-direction: column;
   flex: 1;
-  justify-content: center;
+  justify-content: start;
   font-size: 16px;
   padding: 1em;
 }
@@ -114,7 +114,7 @@ td, tr {
   display: flex;
   flex-direction: column;
   flex: 1;
-  justify-content: center;
+  justify-content: start;
   font-size: 16px;
   padding: 1em;
 }
